--- a/privacy/index.html
+++ b/privacy/index.html
@@ -34,7 +34,7 @@
 
   <h2>5. お問い合わせ</h2>
   <p>
-    本ポリシーに関するお問い合わせ：<a href="mailto:YOUR_EMAIL">YOUR_EMAIL</a>
+    本ポリシーに関するお問い合わせ：<a href="mailto:tani@ymail.ne.jp<">tani@ymail.ne.jp</a>
   </p>
 
   <h2>6. 改定</h2>
@@ -42,7 +42,7 @@
     本ポリシーは必要に応じて改定することがあります。改定後は本ページにて告知します。
   </p>
 
-  <p>制定日：2026-02-XX</p>
+  <p>制定日：2026-02-19</p>
 
   <p><a href="../">トップへ戻る</a></p>
 </body>
