--- a/support/index.html
+++ b/support/index.html
@@ -10,7 +10,7 @@
 
   <p>お問い合わせは以下までお願いします。</p>
   <ul>
-    <li>メール：<a href="mailto:YOUR_EMAIL">YOUR_EMAIL</a></li>
+    <li>メール：<a href="mailto:tani@ymail.ne.jp">tani@ymail.ne.jp</a></li>
     <!-- Googleフォームにするなら ↑ の代わりにフォームURLを貼る -->
   </ul>
 
